Fix spacing between top section and articles on index pages

--- a/css/layout.css
+++ b/css/layout.css
@@ -130,6 +130,7 @@ td + td {
   margin-top: 2rem;
 }
 
+section + article,
 article + article {
   margin-top: 3rem;
 }
